cambiato testo in un grande grazie

--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -3,7 +3,15 @@
 <!--Qui c'è il testo da mettere nel box centrale-->
 <div>
   <span>
-    Se nasce lo stupore dell’incontro fatto, in esso è implicito il senso di una Grazia, di un dono […]. Anche in tal caso, però, non è possibile scoprire tutto il valore di quel presentimento o di quello stupore se non si incontra una compagnia nei quali sia già viva la coscienza che tutto ci è donato da Dio. Nell’aderire con gioia alla nostra vocazione, abbiamo a mente il volto amico di ciascuno di voi e ne siamo immensamente grati. Ci auguriamo di vedervi tutti per festeggiare insieme!
+    «Occorre solo che abbiamo a camminare
+    insieme, seguendo il Mistero che fa tutto»
+  </span>
+  <span>
+    -Luigi Giussani
+  </span>
+  <span>
+    Nell’aderire con gioia alla nostra vocazione, abbiamo a mente il volto amico di ciascuno di voi e ne siamo immensamente grati.
+    Ci auguriamo di vedervi tutti per festeggiare insieme!
   </span>
   <span>Simo & Leti</span>
 </div>
