--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -96,8 +96,8 @@
 </div> -->
 
 
-<div class="titolo">
-  <div class="separatore green2">
+<div class="titolo green">
+  <div class="separatore white">
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
@@ -108,7 +108,7 @@
     <span class="dot"></span>
   </div>
   <span class="text">RSVP</span>
-  <div class="separatore green2">
+  <div class="separatore white">
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
@@ -119,7 +119,7 @@
     <span class="dot"></span>
   </div>
 </div>
-<div class="flex">
+<div class="flex green1">
   <div class="formRSVP">
     <form [formGroup]="rsvpForm">
       <div class="control">
