--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -22,14 +22,19 @@
       margin-right: 16px;
     }
   }
+
+  &.green {
+    color: white;
+    background-color: $green1;
+  }
 }
 
 .formRSVP {
   width: 90%;
   padding: 10px;
-  background-color: $green3;
+  background-color: $green1;
   margin-bottom: 20px;
-  border-radius: 12px;
+  // border-radius: 12px;
 
   .control {
     padding: 0 8px;
@@ -37,7 +42,9 @@
     overflow: hidden;
     margin-bottom: 8px;
     &:focus-within {
-      background-color: $green4;
+      label {
+        color: $green4;
+      }
     }
   }
 
@@ -46,6 +53,7 @@
     line-height: 150%;
     font-family: avenir-regular;
     font-weight: 800;
+    color: white;
   }
 
   button {
@@ -53,12 +61,24 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  input {
+    background-color: white;
+  }
+
+  textarea {
+    background-color: white;
+  }
 }
 
 ::ng-deep .mat-form-field {
   .mat-form-field-infix {
     // background-color: $green3;
     border: 0;
+    padding: 0;
+  }
+  .mat-form-field-underline {
+    display: none !important;
   }
 }
 
@@ -73,7 +93,7 @@
     color: $green1;
   }
   .mat-input-element {
-    color: $green1;
+    color: black;
   }
 }
 
@@ -131,7 +151,7 @@
     object-fit: cover;
     width: 100%;
     overflow: hidden;
-    border-radius: 8px;
+    // border-radius: 8px;
 
     &.h {
       height: 100%;
