--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Simo & Leti.</title>
+</head>
+<body>
+<h1 style="display: flex; position: center; align-content: center; font-family: 'Book Antiqua'">Coming Soon..</h1>
+</body>
+</html>
