re-styling rsvp

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -25,13 +25,22 @@
 
 <div class="containerRSVP">
   <div class="left sb">
-    <span class="descrizione">Santa Maria Goretti è la parrocchia di Letizia, abbiamo deciso di sposarci qui
-      perché...</span><br>
+    <div>
+      <span class="descrizione bold">
+        Parrocchia di Santa Maria Goretti
+      </span><br>
+      <span class="descrizione">Santa Maria Goretti è la parrocchia di Letizia, abbiamo deciso di sposarci qui
+        perché...</span>
+    </div>
+
     <div class="mappa">
+      <span class="descrizione bold">
+        Via Vittorio Actis, 20, Torino TO
+      </span>
       <img src="../../assets/images/mappa_chiesa.png" class="mappa_ristorante" height="300px" width="auto"
         (click)="navigateTo('ristorante')" />
       <div class="gmapLink flex">
-        <a href="https://goo.gl/maps/viiADx5rWwoHY1qY6" class="linkMaps">Maps</a>
+        <a href="https://goo.gl/maps/viiADx5rWwoHY1qY6" class="button">Maps</a>
       </div>
     </div>
   </div>
@@ -71,19 +80,26 @@
     <img src="../../assets/images/cascina_marietta.jpg" class="immagine" />
   </div>
   <div class="right sb">
-    <span class="descrizione">
-      Il ricevimento sarà nella Cascina Marinetta, un'incantevole tenuta settecentesca ai piedi della collina di
-      Cherasco, immersa nella quiete della campagna piemontese e circondata dalle alture delle Langhe. Con un grande
-      parco ricco di piante secolari, un ampio ed elegante cortile e degli affascinanti porticati.
-    </span><br>
-    <span class="descrizione bold">
-      Via Bergoglio, 56, Cherasco, CN
-    </span>
+    <div>
+      <span class="descrizione bold">
+        Cascina Marinetta
+      </span><br>
+      <span class="descrizione">
+        Il ricevimento sarà nella Cascina Marinetta, un'incantevole tenuta settecentesca ai piedi della collina di
+        Cherasco, immersa nella quiete della campagna piemontese e circondata dalle alture delle Langhe. Con un grande
+        parco ricco di piante secolari, un ampio ed elegante cortile e degli affascinanti porticati.
+      </span>
+    </div>
+
+
     <div class="mappa">
+      <span class="descrizione bold">
+        Via Bergoglio, 56, Cherasco CN
+      </span>
       <img src="../../assets/images/mappa_ristorante.png" class="mappa_ristorante" height="300px" width="auto"
         (click)="navigateTo('ristorante')" />
       <div class="gmapLink flex">
-        <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="linkMaps">Maps</a>
+        <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="button">Maps</a>
       </div>
     </div>
 
