--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -5,13 +5,14 @@
   height: 100px;
   color: $green2;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 10%;
   .text {
     font-family: avenir-bold;
     font-size: 40px;
     line-height: 150%;
+    margin: 0 30px;
   }
   .separatore {
     display: flex;
@@ -119,7 +120,9 @@
 .containerRSVP {
   width: 100%;
   display: flex;
-  height: 600px;
+  height: 700px;
+  padding: 0 50px;
+  margin-bottom: 50px;
   &.green {
     background-color: $green1;
   }
@@ -170,28 +173,23 @@
 }
 
 .mappa {
-  display: block;
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   img {
-    width: 400px;
+    width: 80%;
     height: auto;
-    border-radius: 20px;
-    // border: $green1 3px solid;
+    // border-radius: 20px;
     display: block;
   }
   .gmapLink {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
     width: 80px;
-    height: 30px;
-    border: $green1 solid 3px;
+    height: auto;
     border-top: none;
-    border-radius: 0 0 10px 10px;
-    background-color: $green3;
-
-    &:hover {
-      background-color: $green4;
-    }
+    margin-top: 30px;
 
     .linkMaps {
       padding: auto;
