--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,7 @@ body {
   min-width: 200px;
   font-size: 20px;
   font-weight: 800;
+  border-radius: 14px;
 
   &:hover {
     text-decoration: none;
