--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -1,66 +1,107 @@
 <app-responsive-toolbar></app-responsive-toolbar>
+<div class="page">
+  <div class="left">
+    <div class="photoContainer">
+      <ngb-carousel #carousel *ngIf="ImageData4" [showNavigationArrows]="showNavigationArrows"
+        [showNavigationIndicators]="showNavigationIndicators">
+        <ng-template ngbSlide *ngFor="let image of ImageData4">
+          <div class="picsum-img-wrapper">
+            <img [src]="image" alt="Random slide" class="myImg">
+          </div>
+        </ng-template>
+      </ngb-carousel>
+    </div>
 
-<!--Qui c'è il testo da mettere nel box centrale-->
-<div>
-  <span>
-    «Occorre solo che abbiamo a camminare
-    insieme, seguendo il Mistero che fa tutto»
-  </span>
-  <span>
-    -Luigi Giussani
-  </span>
-  <span>
-    Nell’aderire con gioia alla nostra vocazione, abbiamo a mente il volto amico di ciascuno di voi e ne siamo immensamente grati.
-    Ci auguriamo di vedervi tutti per festeggiare insieme!
-  </span>
-  <span>Simo & Leti</span>
+    <div class="photoContainer">
+      <ngb-carousel #carousel *ngIf="ImageData2" [showNavigationArrows]="showNavigationArrows"
+        [showNavigationIndicators]="showNavigationIndicators">
+        <ng-template ngbSlide *ngFor="let image of ImageData2">
+          <div class="picsum-img-wrapper">
+            <img [src]="image" alt="Random slide" class="myImg">
+          </div>
+        </ng-template>
+      </ngb-carousel>
+    </div>
+  </div>
+
+  <div class="right">
+    <div class="photoContainer">
+      <ngb-carousel #carousel *ngIf="ImageData3" [showNavigationArrows]="showNavigationArrows"
+        [showNavigationIndicators]="showNavigationIndicators">
+        <ng-template ngbSlide *ngFor="let image of ImageData3">
+          <div class="picsum-img-wrapper">
+            <img [src]="image" alt="Random slide" class="myImg">
+          </div>
+        </ng-template>
+      </ngb-carousel>
+    </div>
+
+    <div class="photoContainer">
+      <ngb-carousel #carousel *ngIf="ImageData1" [showNavigationArrows]="showNavigationArrows"
+        [showNavigationIndicators]="showNavigationIndicators">
+        <ng-template ngbSlide *ngFor="let image of ImageData1">
+          <div class="picsum-img-wrapper">
+            <img [src]="image" alt="Random slide" class="myImg">
+          </div>
+        </ng-template>
+      </ngb-carousel>
+    </div>
+  </div>
+
+  <div class="boxTesto">
+    <div class="separatore green1">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+    <span>
+      «Occorre solo che abbiamo a camminare
+      insieme, seguendo il Mistero che fa tutto»</span><br>
+    <span>
+      Luigi Giussani</span><br><br>
+    <span>
+      Nell’aderire con gioia alla nostra vocazione, abbiamo a mente il volto amico di ciascuno di voi e ne siamo
+      immensamente grati.<br>
+      Ci auguriamo di vedervi tutti per festeggiare insieme!</span><br>
+    <p class="fs70 green1 mb10">Simo e Leti</p>
+  </div>
+
 </div>
+
+
+
+
 <!-- QUI INIZIANO GLI SLIDESHOW-->
-<div class="mall-slide">
+<!-- <div class="mall-slide">
   <div class="slid-content">
     <div class="mall-show-slide fade" *ngFor="let item of ImageData1;">
       <img src="{{item}}" style="width:100%">
     </div>
-    <!--<div class="mall-carousel-ind">
-      <ul>
-        <li *ngFor="let item of Imagedata; let i = index;" [class.mall-this]="startIndex - 1 === i"></li>
-      </ul>
-    </div>-->
   </div>
-</div>
-<div class="mall-slide">
+</div> -->
+<!-- <div class="mall-slide">
   <div class="slid-content">
     <div class="mall-show-slide fade" *ngFor="let item of ImageData2;">
       <img src="{{item}}" style="width:100%">
     </div>
-    <!--<div class="mall-carousel-ind">
-      <ul>
-        <li *ngFor="let item of Imagedata; let i = index;" [class.mall-this]="startIndex - 1 === i"></li>
-      </ul>
-    </div>-->
   </div>
-</div>
-<div class="mall-slide">
+</div> -->
+<!-- <div class="mall-slide">
   <div class="slid-content">
     <div class="mall-show-slide fade" *ngFor="let item of ImageData3;">
       <img src="{{item}}" style="width:100%">
     </div>
-    <!--<div class="mall-carousel-ind">
-      <ul>
-        <li *ngFor="let item of Imagedata; let i = index;" [class.mall-this]="startIndex - 1 === i"></li>
-      </ul>
-    </div>-->
   </div>
-</div>
-<div class="mall-slide">
-  <div class="slid-content">
-    <div class="mall-show-slide fade" *ngFor="let item of ImageData4;">
-      <img src="{{item}}" style="width:100%">
-    </div>
-    <!--<div class="mall-carousel-ind">
-      <ul>
-        <li *ngFor="let item of Imagedata; let i = index;" [class.mall-this]="startIndex - 1 === i"></li>
-      </ul>
-    </div>-->
-  </div>
-</div>
+</div> -->
+<!-- <div class="mall-slide">
+      <div class="slid-content">
+        <div class="mall-show-slide fade" *ngFor="let item of ImageData4;">
+          <img src="{{item}}">
+        </div>
+      </div>
+    </div> -->
