--- a/src/app/grazie/grazie.component.scss
+++ b/src/app/grazie/grazie.component.scss
@@ -13,6 +13,7 @@
   width: 100%;
   background-color: red;
   padding: 30px;
+  margin-top: 20px;
   .left {
     display: flex;
     width: 50%;
@@ -43,7 +44,7 @@
     position: absolute;
     background-color: white;
     width: 600px;
-    transform: translate(50%, 10px);
+    transform: translate(50%, -40px);
     right: 50%;
     padding: 20px;
     text-align: center;
@@ -65,84 +66,37 @@
   }
 }
 
-// .mall-slide {
-//   position: absolute;
-//   background-color: #f5f5f5;
-//   width: 400px;
-//   height: auto;
-// }
+.carousel-item {
+  display: block !important;
+  z-index: 1;
+  position: absolute;
+  transition: opacity 1.5s easy-in-out, visibility 1s;
+  opacity: 0;
+  visibility: hidden;
+}
+.carousel-item.active {
+  position: relative;
+  transition: opacity 1.5s easy-in-out, visibility 1s;
+  visibility: visible;
+  opacity: 1;
+}
 
-// .mall-slide .slid-content {
-//   width: 200px;
-//   height: auto;
-//   overflow: hidden;
-// }
+::ng-deep {
+  .carousel-item {
+    /* Force to always be block */
+    display: block !important;
+    z-index: 1;
+    position: absolute;
+    transform: translateX(0);
+    opacity: 0;
+    transition: all 1s;
+    visibility: hidden;
+  }
 
-// .mall-slide .slid-content .mall-carousel-ind {
-//position: absolute;
-//   top: 290px;
-//   width: 400px;
-//   height: auto;
-//   line-height: 0 !important;
-//   text-align: center;
-//   font-size: 0;
-//   z-index: 10;
-// }
-
-// .mall-carousel-ind ul {
-//   display: inline-block;
-//   padding: 5px;
-//   background-color: rgba(0, 0, 0, 0.2);
-//   border-radius: 10px;
-//   -webkit-transition-duration: 0.3s;
-//   transition-duration: 0.3s;
-// }
-
-// .mall-carousel-ind li {
-//   display: inline-block;
-//   width: 10px;
-//   height: 10px;
-//   margin: 0 3px;
-//   font-size: 14px;
-//   background-color: #e2e2e2;
-//   background-color: rgba(255, 255, 255, 0.5);
-//   border-radius: 50%;
-//   cursor: pointer;
-//   -webkit-transition-duration: 0.3s;
-//   transition-duration: 0.3s;
-// }
-
-// .mall-carousel-ind li.mall-this {
-//   background-color: #fff;
-//   filter: alpha(opacity=100);
-//   -moz-opacity: 1;
-//   opacity: 1;
-//   width: 30px;
-//   border-radius: 14px;
-// }
-
-/* Fading animation */
-// .fade {
-//   -webkit-animation-name: fade;
-//   -webkit-animation-duration: 0.5s;
-//   animation-name: fade;
-//   animation-duration: 0.5s;
-// }
-
-// @-webkit-keyframes fade {
-//   from {
-//     opacity: 0.4;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
-
-// @keyframes fade {
-//   from {
-//     opacity: 0.4;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+  .carousel-item.active {
+    position: relative;
+    transform: translateX(0);
+    visibility: visible;
+    opacity: 1;
+  }
+}
