--- a/src/app/grazie/grazie.component.scss
+++ b/src/app/grazie/grazie.component.scss
@@ -11,7 +11,7 @@
   display: flex;
   height: 1000px;
   width: 100%;
-  background-color: red;
+  background-color: $green4;
   padding: 30px;
   margin-top: 20px;
   .left {
@@ -29,7 +29,7 @@
     display: flex;
     width: 50%;
     height: 100%;
-    background-color: blue;
+    // background-color: blue;
     align-items: flex-end;
     justify-content: space-between;
     flex-direction: column;
@@ -49,6 +49,7 @@
     padding: 20px;
     text-align: center;
     border: 4px solid $green1;
+    z-index: 100;
 
     .fs70 {
       margin-top: 20px !important;
