cambio font titoli, cambio toolbar sfondo e simo e leti

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<router-outlet></router-outlet>-->
-<!DOCTYPE html>
+<router-outlet></router-outlet>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,4 +8,4 @@
 <body>
 <h1 style="display: flex; position: center; align-content: center; font-family: 'Book Antiqua'">Coming Soon..</h1>
 </body>
-</html>
+</html>-->
