--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="contBianco">
 
     <p class="fs30 mb10"> 10 Aprile 2021</p>
-    <p class="fs70 green mb10">Simone e Letizia</p>
+    <p class="fs70 green mb10">Simo e Leti</p>
 
     <div class="separatore">
       <span class="dot"></span>
