--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -1,5 +1,28 @@
 <app-responsive-toolbar></app-responsive-toolbar>
-<div>
+<div class="titolo">
+  <div class="separatore green2">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
+  <span class="text">Coming soon!</span>
+  <div class="separatore green2">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
+</div>
+<!--<div>
   <button [routerLink]="'/listanozze/lista'">Lista</button>
 </div>
 <div>
@@ -18,4 +41,4 @@
   <div class="text-block">
     <h4>Viaggio di Nozze</h4>
   </div>
-</div>
+</div>-->
