--- a/src/app/responsive-toolbar/responsive-toolbar.component.html
+++ b/src/app/responsive-toolbar/responsive-toolbar.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar fxLayout="row" class="toolbar">
   <mat-toolbar-row fxHide.xs>
-
+    <p class="fs25 green mb10" style="margin-left: 40px; margin: auto;">Simo e Leti</p>
     <div class="toolbarButtons">
-      <button mat-button [routerLink]="'/'">Home</button>
-      <button mat-button [routerLink]="'/info'">RSVP & Info</button>
-      <button mat-button [routerLink]="'/listanozze'">Lista nozze </button>
-      <button mat-button [routerLink]="'/grazie'">Un grande grazie</button>
+      <button mat-button [routerLink]="'/'" >Home</button>
+      <button mat-button [routerLink]="'/info'">Info & RSVP</button>
+      <button mat-button [routerLink]="'/listanozze'">Lista Nozze </button>
+      <button mat-button [routerLink]="'/grazie'">Un Grande Grazie</button>
     </div>
 
   </mat-toolbar-row>
@@ -17,7 +17,7 @@
       <div>
         <button mat-button [routerLink]="'/'">Home</button>
         <mat-divider></mat-divider>
-        <button mat-button [routerLink]="'/info'">RSVP & Info</button>
+        <button mat-button [routerLink]="'/info'">Info & RSVP</button>
         <mat-divider></mat-divider>
         <button mat-button [routerLink]="'/listanozze'">Lista nozze </button>
         <mat-divider></mat-divider>
