--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -9,8 +9,8 @@
   align-items: center;
   padding: 0 10%;
   .text {
-    font-family: avenir-bold;
-    font-size: 40px;
+    font-family: honey; /*avenir-regular*/
+    font-size: 80px; /*40px*/
     line-height: 150%;
     margin: 0 30px;
   }
