--- a/src/app/lista-nozze/lista-nozze.component.scss
+++ b/src/app/lista-nozze/lista-nozze.component.scss
@@ -1,3 +1,5 @@
+@import "src/assets/styles/colors.scss";
+
 .container {
   position: relative;
   width: 200px;
@@ -23,4 +25,34 @@
 
 .text-block:hover {
   /*ingrandisco il box di un pochino*/
+}
+
+.titolo {
+  width: 100%;
+  height: 100px;
+  color: $green2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+  .text {
+    font-family: honey; /*avenir-regular*/
+    font-size: 80px; /*40px*/
+    line-height: 150%;
+    margin: 0 30px;
+  }
+  .separatore {
+    display: flex;
+    justify-content: space-between;
+    .dot {
+      width: 10px;
+      height: 10px;
+      margin-right: 16px;
+    }
+  }
+
+  &.green {
+    color: white;
+    background-color: $green1;
+  }
 }
