--- a/src/app/responsive-toolbar/responsive-toolbar.component.scss
+++ b/src/app/responsive-toolbar/responsive-toolbar.component.scss
@@ -1,8 +1,13 @@
 .toolbar{
-  background-color: white;
+  background-color: #c7dabc;
 }
 
 .toolbarButtons{
   margin: auto;
   background-color:transparent;
+}
+
+button {
+  font-family: honey;
+  font-size: 30px;
 }
