cambio font titoli, cambio toolbar sfondo e simo e leti, cambio stile bottoni

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
     <mat-icon svgIcon="calendar"></mat-icon>
     <span class="t1">10 Aprile 2021</span>
     <span class="t2">Inizio celebrazione 10:30</span>
-    <a [routerLink]="'/info'" class="button">RSVP</a>
+    <a [routerLink]="'/info'" fragment="rsvp" class="button">RSVP</a>
   </div>
 
   <div class="card">
