--- a/src/app/responsive-toolbar/responsive-toolbar.component.html
+++ b/src/app/responsive-toolbar/responsive-toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar fxLayout="row" class="toolbar">
   <mat-toolbar-row fxHide.xs>
-    <p class="fs25 green mb10" style="margin-left: 40px; margin: auto;">Simo e Leti</p>
+    <p class="fs25 text-white mb10" style="margin: auto; margin-left: 200px;">Simo e Leti</p>
     <div class="toolbarButtons">
       <button mat-button [routerLink]="'/'" >Home</button>
       <button mat-button [routerLink]="'/info'">Info & RSVP</button>
