--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -2,6 +2,7 @@ $green1: #255d40;
 $green2: #5ba66b;
 $green3: #8ec59f;
 $green4: #c7dabc;
+$greenbar: #678c73; //#7ca98b;
 // $green5: $green1;
 $gray1: #767171;
 $error: #ec3713;
