--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ body {
 .button {
   color: white;
   border: none;
-  background-color: black;
+  background-color: $greenbar;
   padding: 8px 0;
   text-align: center;
   min-width: 200px;
@@ -94,7 +94,7 @@ body {
 
   &:hover {
     text-decoration: none;
-    background-color: #989191;
+    background-color: $green3;//#989191;
     color: white;
   }
   &.disabled {
