--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,20 +67,34 @@
 </div>
 
 <div class="container4Home">
-  <div class="separatore green2">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+  <div class="photoContainerHome">
+    <ngb-carousel *ngIf="Images" [showNavigationArrows]="false" [showNavigationIndicators]="false">
+      <ng-template ngbSlide *ngFor="let image of Images">
+        <div class="picsum-img-wrapper">
+          <img [src]="image" alt="Random slide" class="myImg">
+        </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
-  scritta<br>
 
-  bottone
+  <div class="boxScritta flex column">
+    <div class="separatore green2">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+    <span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»<br>
+      Luigi Giussani</span>
+    <a [routerLink]="'/grazie'" class="button">Grazie!</a>
+  </div>
 </div>
+
+
 
 <!-- <div class="footer"></div> -->
 
