cambiato link to grazie in home, dimensioni rsvp in info, disabilitate le mail (il server non è up)

--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -1,4 +1,4 @@
-<app-responsive-toolbar></app-responsive-toolbar>
+<app-responsive-toolbar id="top"></app-responsive-toolbar>
 <div class="page">
   <div class="left">
     <div class="photoContainer">
