--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,7 +90,7 @@
     </div>
     <span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»<br>
       Luigi Giussani</span>
-    <a [routerLink]="'/grazie'" class="button">Grazie!</a>
+    <a [routerLink]="'/grazie'" fragment="top" class="button" style="font-size: 16px">Per ringraziarvi...</a>
   </div>
 </div>
 
