--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -99,13 +99,16 @@
     .center {
       margin: 20px;
       text-align: center;
-      width: 800px;
+      width: 500px;
+      font-size: 20px;
     }
   }
 
   .photoContainerHome {
     width: 570px;
     height: 90%;
+    background-color: $green1;
+    padding: 5px;
     overflow: hidden;
     opacity: 0.3;
   }
