--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -1,5 +1,25 @@
 @import "src/assets/styles/colors.scss";
 
+.inputStyle {
+  height: 30px;
+  font-size: 20px;
+  padding: 2px;
+  font-family: avenir-regular;
+}
+
+.inputAreaStyle {
+  height: 100px;
+  font-size: 20px;
+  padding: 2px;
+  font-family: avenir-regular;
+}
+
+.inputLabel {
+  font-family: avenir-regular;
+  font-size: 18px !important;
+  height: auto;
+}
+
 .titolo {
   width: 100%;
   height: 100px;
