cambiamenti grafici vari

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-responsive-toolbar></app-responsive-toolbar>
 <div class="container1Home">
-  <img alt="immagine in montagna" src="../../assets/images/homeImg.jpg" class="backgroundHome" />
+  <img alt="immagine in montagna" src="../../assets/images/home.jpg" class="backgroundHome" />
 </div>
 <div class="rettVerde">
   <div class="contBianco">
@@ -88,8 +88,7 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
-    <span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»<br>
-      Luigi Giussani</span>
+    <span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»</span>
     <a [routerLink]="'/grazie'" fragment="top" class="button" style="font-size: 16px">Per ringraziarvi...</a>
   </div>
 </div>
