--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -24,13 +24,11 @@
 </div>
 
 <div class="containerRSVP">
-  <div class="left sb">
+  <div class="left sb first">
     <div>
-      <span class="descrizione bold">
+      <span class="titoletto bold ">
         Parrocchia di Santa Maria Goretti
-      </span><br>
-      <span class="descrizione">Santa Maria Goretti è la parrocchia di Letizia, abbiamo deciso di sposarci qui
-        perché...</span>
+      </span>
     </div>
 
     <div class="mappa">
@@ -80,14 +78,9 @@
     <img src="../../assets/images/cascina_marietta.jpg" class="immagine" />
   </div>
   <div class="right sb">
-    <div>
-      <span class="descrizione bold">
+    <div class="first">
+      <span class="titoletto bold">
         Cascina Marinetta
-      </span><br>
-      <span class="descrizione">
-        Il ricevimento sarà nella Cascina Marinetta, un'incantevole tenuta settecentesca ai piedi della collina di
-        Cherasco, immersa nella quiete della campagna piemontese e circondata dalle alture delle Langhe. Con un grande
-        parco ricco di piante secolari, un ampio ed elegante cortile e degli affascinanti porticati.
       </span>
     </div>
 
