--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,20 @@
 @import "src/assets/styles/colors.scss";
 
+
+
 .container1Home {
   display: flex;
-  width: 100%;
-  height: auto;
+  width: 60%;
+  height: 600px;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  .backgroundHome {
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+    horiz-align: center;
+  }
 }
 
 .container2Home {
@@ -214,6 +224,7 @@
     height: 70px;
     width: 70px;
     transform: rotate(180deg);
+    z-index: 1;
   }
 
   .text {
