--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,11 @@ body {
   font-weight: 500;
   line-height: 60px;
 }
+
+.right{
+  text-align: right;
+  padding-right:40px;
+}
 .green {
   color: #367e3d;
 }
