--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,30 +31,36 @@
 </div>
 <!-- links-->
 <div class="container2Home">
-  <div class="card">
-    <span class="cardTitle">SAVE THE DATE</span>
-    <mat-icon svgIcon="calendar"></mat-icon>
-    <span class="t1">10 Aprile 2021</span>
-    <span class="t2">Inizio celebrazione 10:30</span>
-    <a [routerLink]="'/info'" fragment="rsvp" class="button">RSVP</a>
+  <div class="cardWrapper">
+    <div class="card">
+      <span class="cardTitle">SAVE THE DATE</span>
+      <mat-icon svgIcon="calendar"></mat-icon>
+      <span class="t1">10 Aprile 2021</span>
+      <span class="t2">Inizio celebrazione 10:30</span>
+      <a [routerLink]="'/info'" fragment="rsvp" class="button">RSVP</a>
+    </div>
   </div>
 
-  <div class="card">
-    <span class="cardTitle">CERIMONIA</span>
-    <mat-icon class="icon-display" svgIcon="church" label="10 Aprile 2021"></mat-icon>
-    <span class="t1">Santa Maria Goretti</span>
-    <span class="t2">Via Vittorio Actis, 20, 10146 Torino TO</span>
-    <a href="https://goo.gl/maps/viiADx5rWwoHY1qY6" class="button">Maps</a>
+  <div class="cardWrapper">
+    <div class="card">
+      <span class="cardTitle">CERIMONIA</span>
+      <mat-icon class="icon-display" svgIcon="church" label="10 Aprile 2021"></mat-icon>
+      <span class="t1">Santa Maria Goretti</span>
+      <span class="t2">Via Vittorio Actis, 20, 10146 Torino TO</span>
+      <a href="https://goo.gl/maps/viiADx5rWwoHY1qY6" class="button">Maps</a>
+    </div>
   </div>
 
-  <div class="card">
-    <span class="cardTitle">FESTEGGIAMENTI</span>
-    <mat-icon svgIcon="party"></mat-icon>
-    <span class="t1">Cascina Marinetta</span>
-    <span class="t2">Via Bergoglio, 56, 12062 Cherasco CN</span>
+  <div class="cardWrapper">
+    <div class="card">
+      <span class="cardTitle">FESTEGGIAMENTI</span>
+      <mat-icon svgIcon="party"></mat-icon>
+      <span class="t1">Cascina Marinetta</span>
+      <span class="t2">Via Bergoglio, 56, 12062 Cherasco CN</span>
 
-    <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="button">Maps</a>
+      <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="button">Maps</a>
 
+    </div>
   </div>
 </div>
 
