--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,5 @@
 @import "src/assets/styles/colors.scss";
 
-
-
 .container1Home {
   display: flex;
   width: 60%;
@@ -10,19 +8,23 @@
   margin-left: auto;
   margin-right: auto;
   .backgroundHome {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
     vertical-align: middle;
-    horiz-align: center;
+    object-fit: cover;
   }
 }
 
 .container2Home {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  padding: 100px 200px;
+  justify-content: center;
+  padding: 100px;
+  flex-wrap: wrap;
 
+  .cardWrapper {
+    display: inline-flex;
+  }
   .card {
     display: flex;
     flex-direction: vertical;
@@ -85,6 +87,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 
   .immagine {
     height: 80%;
