--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,14 +2,15 @@
 
 .container1Home {
   display: flex;
-  width: 60%;
+  width: 100%;
   height: 600px;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  align-items: center;
   .backgroundHome {
     max-width: 100%;
     max-height: 100%;
+    height: 100%;
+    width: auto;
     vertical-align: middle;
     object-fit: cover;
   }
